--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "ao-ktunes",
   "version": "0.1.0",
+  "homepage": "https://aeoconnor.github.io/test",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
@@ -11,6 +13,8 @@
     "xml2js": "^0.4.19"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
