--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ao-ktunes",
   "version": "0.1.0",
-  "homepage": "https://aeoconnor.github.io/test",
+  "homepage": "https://aeoconnor.github.io/ao-ktunes",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
